added google auth

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
         <module>click</module>
         <module>simple</module>
         <module>basic</module>
+        <module>jdbc</module>
     </modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
